--- a/babel.config.json
+++ b/babel.config.json
@@ -8,8 +8,9 @@
     }]
   ],
   "plugins": [
-    [
-      "@babel/transform-runtime"
-    ]
+    "@babel/plugin-transform-runtime"
+  ],
+  "ignore": [
+    "node_modules"
   ]
 }
